[gd_scene load_steps=5 format=3 uid="uid://dgxrkgaunc5ow"]

[ext_resource type="Texture2D" uid="uid://iqfrm86bu368" path="res://OS/OS_Icons/Icon_Assets/save_icon.png" id="1_f1vq1"]
[ext_resource type="Script" path="res://OS/OS_Icons/Icon.gd" id="1_g46xi"]
[ext_resource type="Script" path="res://OS/OS_Icons/VBoxIcon.gd" id="2_udq4d"]

[sub_resource type="LabelSettings" id="LabelSettings_8tfda"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[node name="Icon" type="Node2D"]
script = ExtResource("1_g46xi")

[node name="VBoxIcon" type="VBoxContainer" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 160.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Save your game"
theme_override_constants/separation = 0
script = ExtResource("2_udq4d")

[node name="Portion1" type="MarginContainer" parent="VBoxIcon"]
layout_mode = 2

[node name="IconSprite" type="TextureRect" parent="VBoxIcon/Portion1"]
layout_mode = 2
texture = ExtResource("1_f1vq1")
stretch_mode = 3

[node name="Portion2" type="MarginContainer" parent="VBoxIcon"]
layout_mode = 2

[node name="IconName" type="Label" parent="VBoxIcon/Portion2"]
layout_mode = 2
text = "Save Label!"
label_settings = SubResource("LabelSettings_8tfda")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BG" type="TextureRect" parent="VBoxIcon/Portion2"]
layout_mode = 2
stretch_mode = 3
